external-crates/move/crates/move-compiler/tests/move_check/expansion/use_spec_schema_invalid_as.exp
warning[W00001]: DEPRECATED. will be removed
  ┌─ tests/move_check/expansion/use_spec_schema_invalid_as.move:3:5
  │  
3 │ ╭     spec schema Foo<T> {
4 │ │         ensures true;
5 │ │     }
  │ ╰─────^ Specification blocks are deprecated

error[E02010]: invalid name
  ┌─ tests/move_check/expansion/use_spec_schema_invalid_as.move:9:25
  │
9 │     use 0x2::X::{Foo as foo};
  │                         ^^^ Invalid schema alias name 'foo'. Schema alias names must start with 'A'..'Z'

warning[W00001]: DEPRECATED. will be removed
   ┌─ tests/move_check/expansion/use_spec_schema_invalid_as.move:12:5
   │  
12 │ ╭     spec t {
13 │ │         apply foo<S> to t;
14 │ │     }
   │ ╰─────^ Specification blocks are deprecated

